--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     </footer>
 
     <!-- Модальне Вікно -->
-    <div class="backdrop is-open">
+    <div class="backdrop"> <!-- сменить клас на backdrop is-open для открития модального окна -->
       <div class="modal">
         <button class="close-btn" type="button">
           <svg 
