--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li class="contacts-item link"><a class="contacts-tel" href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
         </ul>
       </div>
-      <div class="mob-menu">
+      <div class="mob-menu is-hidden">
         <div class="container">
           <button type="button" class="menu-close-btn">
             <svg class="close-btm-icon" width="8" height="8">
@@ -594,7 +594,15 @@
           <div class="modal-field">
             <label class="modal-label" for="user-name">Name</label>
             <div class="modal-input-wrap">
-              <input class="modal-input" type="text" id="user-name" />
+              <input
+                class="modal-input"
+                type="text"
+                id="user-name"
+                name="user-name"
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
+                title="Alex"
+                required
+              />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
@@ -603,7 +611,15 @@
           <div class="modal-field">
             <label class="modal-label" for="user-tel">Phone</label>
             <div class="modal-input-wrap">
-              <input class="modal-input" type="tel" id="user-tel" />
+              <input
+                class="modal-input"
+                type="tel"
+                id="user-tel"
+                name="user-tel"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                required
+              />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
@@ -612,7 +628,7 @@
           <div class="modal-field">
             <label class="modal-label" for="user-email">Email</label>
             <div class="modal-input-wrap">
-              <input class="modal-input" type="email" id="user-email" />
+              <input class="modal-input" type="email" id="user-email" name="user-email" required />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
@@ -641,8 +657,5 @@
         <button class="btn-submit" type="submit">Send</button>
       </div>
     </div>
-
-    <script src="./js/modal.js"></script>
-    <script src="./js/menu.js"></script>
   </body>
 </html>
